<resources>
    <string name="app_name">ICT生态圈</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok_str">确定</string>
    <string name="cancel_str">取消</string>
    <string name="title_activity_dialogue_compose">DialogueComposeActivity</string>
    <string name="title_activity_dialogue_info">DialogueInfoActivity</string>
    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_activity_xiao_xi__main_tab">XiaoXi_MainTabActivity</string>
    <string name="title_activity_tong_xun_lu__main_tab">TongXunLu_MainTabActivity</string>
    <string name="title_activity_you_jizan__main_tab">YouJian_MainTabActivity</string>
    <string name="title_activity_xie_tong__main_tab">XieTong_MainTabActivity</string>
    <string name="title_activity_wo__main_tab">Wo_MainTabActivity</string>
    <string name="login_title">登录</string>
    <string name="login_button_title">登录</string>
    <string name="login_forget_password_title">忘记密码?</string>
    <string name="login_edit_hint_title">QQ号/微信号/手机号</string>
    <string name="login_password_edit_title">密码</string>
    <string name="login_back_button_title">返回</string>
    <string name="contact_count">联系人搜索  | 共有%1d个联系人</string>
    <string name="bad_net">网络不通，请查看</string>
    <string name="next_action">下一步</string>
    <string name="search_no_data_tips">未找到匹配的数据</string>
    <string name="search_cancel_text">取消</string>
    <string name="search_search_text">搜索</string>
    <string name="setting_exit">关闭 ‘工作•圈’</string>
    <string name="common_startup_slogan">连接工作，连接你我</string>
    <string name="login_status_tips">登录中…</string>
    <string name="workbench_setting_updatepwd_ok">确定</string>
    <string name="logistics_apptitle">物流上报</string>
    <string name="logistics_title">物流业景气指数上报</string>
    <string name="logistics_main_title">指数上报</string>
    <string name="logistics_history_title">历史上报数据</string>
    <string name="logistics_title_history">上报历史</string>
    <string name="logistics_info1">温馨提示</string>
    <string name="logistics_btn_preview_info">预览</string>
    <string name="logistics_btn_commit_info">提交</string>
    <string name="logistics_info2">2015年1季度物流业景气指数上报已截止\n2015年2季度物流业景气指数上报即将启动\n（上报时间2015.04.01-2015.04.05）敬请关注</string>
    <string name="logistics_item_title"><u>sdakfasd</u></string>
    <string name="logistics_edit_title">业务总量指标</string>
    <string name="logistics_neterror">网络连接失败</string>
    <string name="logistics_customedit_et_hint">输入您的具体数值</string>
    <string name="logistics_customedit_title">详细输入</string>
    <string name="logistics_customedit_ok">确定</string>
    <string name="logistics_history_noinfo">暂无历史记录</string>
    <string name="login_phoneno_edit_hint_title">请输入手机号码</string>
    <string name="login_password_edit_hint_title">请输入密码</string>
    <string name="login_rememberpassword_title">记住密码</string>
    <string name="login_visit">游客登录</string>
    <string name="login_button_titles">登录</string>
    <string name="login_button_register">注册</string>
    <string name="reset_password_title1">找回密码</string>
    <string name="reset_password_title2">设置新密码</string>
    <string name="reset_password_new_password">请输入新密码</string>
    <string name="reset_password_new_password_agin">请再次输入新密码</string>
    <string name="reset_password_phone_number_empty_tips">请输入手机号码！</string>
    <string name="reset_password_phone_number_error_tips">手机号码不正确，请重新输入！</string>
    <string name="register_phone">填写手机号码</string>
    <string name="register_phone_write">请输入手机号码</string>
    <string name="bad_phone">手机号码长度不正确</string>
    <string name="common_register_tittle">填写激活码</string>
    <string name="common_register_key">请输入激活码</string>
    <string name="common_register_password">请设置初始密码</string>
    <string name="common_register_password_repeat">请再次输入初始密码</string>
    <string name="common_register_yourphone">您的手机号码：</string>
    <string name="common_register_messgae">我们给您发了一条短信，请将短信中的数字作为验证码填写在下面</string>
    <string name="common_register_remind">提示：如果您在60秒内未收到验证码，请重新发送验证码。</string>
    <string name="common_register_retime">重新发送</string>
    <string name="common_register_nullkey">请输入验证码</string>
    <string name="common_register_nullpassword">请输入密码</string>
    <string name="common_register_badpassword">两次密码输入不一致,请重新输入密码</string>
    <string name="common_register_wait">请稍等</string>
    <string name="common_main_title_working">移动工作圈</string>
    <string name="common_main_tab_working">工作台</string>
    <string name="common_main_tab_work_group">工作群</string>
    <string name="common_main_tab_colleagues">ICT生态圈</string>
    <string name="common_main_tab_linkman">通讯录</string>
    <string name="common_main_tab_more">我</string>
    <string name="common_main_tab_msg">消息</string>
    <string name="im_main_tab_no_chat_msg_tips">暂无聊天信息！</string>
    <string name="im_main_tab_no_group_msg_tips">暂无群组信息！</string>
    <string name="im_chat_send_again">重发</string>
    <string name="im_chat_send_msg">发送</string>
    <string name="im_chat_pressed_to_say">按住说话</string>
    <string name="im_chat_image">图片</string>
    <string name="im_chat_take_photo">拍照</string>
    <string name="im_chat_location">位置</string>
    <string name="im_chat_voice_input">语音输入</string>
    <string name="im_chat_no_msg_tips">暂无聊天信息！</string>
    <string name="im_chat_net_status">网络连接不可用</string>
    <string name="im_create_group_title_txt">发起群聊</string>
    <string name="im_create_group_btn_txt">确定</string>
    <string name="im_create_group_hint_name">请输入群名称</string>
    <string name="im_create_group_hint_remark">请输入群备注</string>
    <string name="im_create_group_hint_people">请选择群成员</string>
    <string name="P2Pchat_setting">聊天设置</string>
    <string name="P2Pchat_setting_name">姓名</string>
    <string name="P2Pchat_setting_news">新消息通知</string>
    <string name="P2Pchat_setting_chat">直接聊天</string>
    <string name="P2Pchat_setting_background">设置当前聊天背景</string>
    <string name="P2Pchat_setting_findchat">查找聊天记录</string>
    <string name="P2Pchat_setting_emptychat">清空聊天记录</string>
    <string name="P2Pchat_setting_emptychat_dialog_hint">提 示</string>
    <string name="workgrp_list_pull_refresh">下拉刷新</string>
    <string name="workgrp_list_release_to_refresh">松开刷新</string>
    <string name="workgrp_list_refreshing">正在刷新中</string>
    <string name="workgrp_list_update_time">更新于</string>
    <string name="workgrp_list_reply">评论 0</string>
    <string name="workgrp_list_nopraise">赞</string>
    <string name="workgrp_list_praised">已赞</string>
    <string name="workgrp_newbbs_title">标题</string>
    <string name="workgrp_newbbs_content">内容</string>
    <string name="workgrp_newbbs_publish">发贴</string>
    <string name="workgrp_newbbs_backtitle">发表主题</string>
    <string name="workgrp_noitem">本频道暂无消息！</string>
    <string name="workgrp_nogroup">暂无频道！</string>
    <string name="workgrp_concernme">与我相关</string>
    <string name="workgrp_create">发帖</string>
    <string name="workgrp_copy">关于帖子</string>
    <string name="workgrp_copy_operation">复制</string>
    <string name="workgrp_copy_operation2">复制内容</string>
    <string name="workgrp_quit_operation">取消</string>
    <string name="workgrp_delete_operation">删除评论</string>
    <string name="workbench_setting_title">我</string>
    <string name="workbench_setting_personalinfo">个人信息</string>
    <string name="workbench_setting_updatepwd">修改密码</string>
    <string name="workbench_setting_about">关于工作•圈</string>
    <string name="workbench_setting_checkversion">检查版本</string>
    <string name="workbench_setting_exit">退出</string>
    <string name="workbench_setting_personalinfo_title">个人信息</string>
    <string name="workbench_setting_personalinfo_head">头像</string>
    <string name="workbench_setting_personalinfo_name">名字</string>
    <string name="workbench_setting_personalinfo_position">职位</string>
    <string name="workbench_setting_personalinfo_phone">电话</string>
    <string name="workbench_setting_personalinfo_number">短号</string>
    <string name="workbench_setting_personalinfo_department">公司部门</string>
    <string name="workbench_setting_newmessage">新消息提醒</string>
    <string name="workbench_setting_nine_grids">工作台九宫格切换</string>
    <string name="workbench_setting_commingcall">来电弹窗</string>
    <string name="workbench_setting_newmessage_title">新消息提醒</string>
    <string name="workbench_setting_newmessage_inform">接收新消息通知</string>
    <string name="workbench_setting_newmessage_sound">声音</string>
    <string name="workbench_setting_newmessage_shake">震动</string>
    <string name="workbench_setting_updatepwd_title">修改密码</string>
    <string name="workbench_setting_updatepwd_explain">设置密码后,你可以使用手机号码+密码登录</string>
    <string name="workbench_setting_updatepwd_phone">手机号:13800138000</string>
    <string name="workbench_setting_updatepwd_oldpwd">旧密码:</string>
    <string name="workbench_setting_updatepwd_newpwd">新密码:</string>
    <string name="workbench_setting_updatepwd_newpwd2">确认密码:</string>
    <string name="workbench_setting_personalinfo_signature">个性签名</string>
    <string name="workbench_setting_about_mobile">关于移动</string>
    <string name="workbench_setting_adcolum_detail_title">详情</string>
    <string name="workbench_setting_newcompany">新的企业</string>
    <string name="workbench_setting_newcompany_addcompany">添加企业</string>
    <string name="workbench_setting_newcompany_retry">请检查网络后，点击重试</string>
    <string name="workbench_setting_newcompany_loading">加载中</string>
    <string name="workbench_setting_selectcompany">选择您的企业</string>
    <string name="workbench_setting_select">选择</string>
    <string name="gronp_chat_setting_title">群设置</string>
    <string name="gronp_chat_setting_name">群聊名称</string>
    <string name="gronp_chat_setting_manager">群管理员</string>
    <string name="gronp_chat_setting_sign">群签名</string>
    <string name="gronp_chat_setting_picture">群图片</string>
    <string name="gronp_chat_setting_member">群成员</string>
    <string name="gronp_chat_setting_message_switch">新消息通知开关</string>
    <string name="gronp_chat_setting_manager_setting">群成员(-)</string>
    <string name="gronp_chat_setting_search_chat_log">查找聊天记录</string>
    <string name="gronp_chat_setting_clear_chat_log">清空聊天记录</string>
    <string name="gronp_chat_setting_dismiss">解散群</string>
    <string name="gronp_chat_setting_exit">退出此群</string>
    <string name="gronp_chat_setting_active">未激活成员(-)</string>
    <string name="gronp_chat_setting_admin">群管理员</string>
    <string name="gronp_chat_setting_show_admin_master">管理员</string>
    <string name="gronp_chat_setting_show_admin_employee">群管理员</string>
    <string name="gronp_chat_setting_show_admin_department">部门</string>
    <string name="addrbook_search">搜索</string>
    <string name="addrbook_contacts">常用联系人</string>
    <string name="addrbook_contact">联系人</string>
    <string name="addrbook_new_friend">新的朋友</string>
    <string name="addrbook_mycompany">我的群组</string>
    <string name="addrbook_choose_contacts">选择联系人</string>
    <string name="addrbook_group_contacts">集团通讯录</string>
    <string name="addrbook_personal">联系人详情</string>
    <string name="addrbook_personal_phone">电话</string>
    <string name="addrbook_personal_short">短号</string>
    <string name="addrbook_personal_email">Email</string>
    <string name="addrbook_dailog_personal">查看详情</string>
    <string name="addrbook_dailog_phone">打电话</string>
    <string name="addrbook_dailog_wxsms">发消息</string>
    <string name="addrbook_dailog_sms">发短信</string>
    <string name="addrbook_email">发邮件</string>
    <string name="addrbook_task">派任务</string>
    <string name="process_pop_out">新增外出申请</string>
    <string name="process_pop_leave">新增事假申请</string>
    <string name="process_pop_sick_leave">新增病假申请</string>
    <string name="process_pop_days_off">新增调休申请</string>
    <string name="process_pop_marriage">新增婚假申请</string>
    <string name="process_pop_maternity_leave">新增产假申请</string>
</resources>