<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f5f5f5">

    <FrameLayout
        android:id="@+id/layout_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_actionbar"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- 手机号码显示 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_register_yourphone"
                android:textColor="#333333"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/common_regiter_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333333"
                android:textSize="15sp"/>
        </LinearLayout>
        <!-- 提示 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/common_register_messgae"
            android:textColor="#666"/>

        <!-- 激活码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <!-- 输入激活码 -->

            <EditText
                android:id="@+id/common_register_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/common_input_border"
                android:hint="@string/common_register_key"
                android:inputType="number"
                android:paddingLeft="6dp"
                android:singleLine="true"
                android:textSize="15sp"/>
            <!-- 验证码计时器 -->

            <Button
                android:id="@+id/common_register_time"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/common_input_border"
                android:text="@string/common_register_wait"
                android:textColor="#888"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_input_border"
            android:orientation="vertical">

            <!-- 设置初始密码 -->

            <EditText
                android:id="@+id/common_register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/common_register_password"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:singleLine="true"
                android:textSize="15sp"/>

            <include layout="@layout/public_line_horizontal_gray"/>
            <!-- 重复初始密码 -->

            <EditText
                android:id="@+id/common_register_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/common_register_password_repeat"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:singleLine="true"
                android:textSize="15sp"/>
        </LinearLayout>

        <!-- 下一步点击按钮 -->

        <Button
            android:id="@+id/common_next_action"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/common_btn_bg_blue_selector"
            android:text="@string/next_action"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <!-- 提示信息 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/common_register_remind"
            android:textColor="#666666"/>
    </LinearLayout>

</RelativeLayout>