<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffffff"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/layout_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_normal"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- 个人设置头像 -->
            <ImageView
                android:id="@+id/im_p2p_chat_head_img_iv"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/component_initial_headimg"
                android:contentDescription="@string/app_name"/>

            <!-- 个人设置名字 -->
            <TextView
                android:id="@+id/im_p2p_chat_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/im_p2p_chat_head_img_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/P2Pchat_setting_name"
                android:textColor="#ff333333"
                android:textSize="16sp"
                android:visibility="visible"/>
        </RelativeLayout>

        <!-- 添加更多人至创建群 -->
        <ImageButton
            android:id="@+id/p2p_chat_more"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/p2pchat_setting_addmore_btn_bg_selector"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/listview_item_bg_normal">

        <!-- 新消息通知 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/P2Pchat_setting_news"
            android:textColor="#ff333333"
            android:textSize="16sp"/>

        <!-- 新消息通知图片 -->
        <CheckBox
            android:id="@+id/im_p2p_chat_new_msg_notify_switch_cb"
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_checkbox_select"
            android:button="@null"/>
    </RelativeLayout>

    <!-- 查找聊天记录 -->
    <TextView
        android:id="@+id/im_p2p_chat_find_chat_msg_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/P2Pchat_setting_findchat"
        android:textColor="#ff333333"
        android:textSize="16sp"/>

    <!-- 清空聊天记录 -->
    <TextView
        android:id="@+id/im_p2p_chat_clear_chat_msg_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/P2Pchat_setting_emptychat"
        android:textColor="#ff333333"
        android:textSize="16sp"/>

</LinearLayout>